--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES6", // Set the JavaScript language version for emitted JavaScript and include compatible library declarations
+    "lib": ["esnext"],
     "jsx": "react-jsx", // Specify what JSX code is generated
     "module": "commonjs", // Specify what module code is generated
     "moduleResolution": "node", // Specify how TypeScript looks up a file from a given module specifier
